# datapond

./: .gitignore  LICENSE  Makefile  README.md  conftest.py  db.py  main.py  pyproject.toml  resultview.py  table.py  tabletree.py  test_db.py  test_main.py  test_table.py  test_tabletree.py  test_utils.py  utils.py
data/: animals.csv  numbers.csv
gui/: collapsiblesplitter.py  combostack.py  indexcombobox.py  layout.py  logs.py  plotter.py  query.py  resultview.py  tabletree.py  test_combostack.py  test_indexcombobox.py  test_plotter.py  test_resultview.py  test_tabletree.py
gui/common/: __init__.py  highlighttextedit.py
