[project]
name = "datapond"
version = "0.1.0"
dependencies = ["pyside6", "qtpy", "duckdb", "polars[pyarrow]", "Pygments"]

[project.optional-dependencies]
dev = ["pytest", "pytest-qt", "pyright", "ruff", "ipython"]

[tool.pyright.defineConstant]
PYQT5 = false
PYSIDE2 = false
PYQT6 = false
PYSIDE6 = true
